kubernetes/aks/system/oneuptime/base/customprobe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oneuptime-probe-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oneuptime-probe-0
  template:
    metadata:
      labels:
        app: oneuptime-probe-0
    spec:
      containers:
        - name: oneuptime-probe
          image: oneuptime/probe:release
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
      hostNetwork: true
