kubernetes/aks/system/oneuptime/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneuptime
  annotations:
    # https://oneuptime.com/docs/probe/ip-address
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.5.0.0/16,205.194.32.0/24,51.159.99.250,62.210.173.51,51.159.101.36,172.174.206.132,57.151.99.117
    external-dns.alpha.kubernetes.io/target: inspection.alpha.canada.ca
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - oneuptime.inspection.alpha.canada.ca
      secretName: status-https-cert
  rules:
    - host: oneuptime.inspection.alpha.canada.ca
      http:
        paths:
          - path: /
            backend:
              service:
                name: oneuptime-nginx
                port:
                  name: http
            pathType: Prefix
